--- a/index.html
+++ b/index.html
@@ -4,14 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Architect-Website</title>
+    <link rel="stylesheet" href="styles.css/architect.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
         <nav>
+            <h1 class="nav-title">G3 Architects</h1>
             <ul>
-                
+                <li><a href="Home">Home</a></li>
+                <li><a href="About">About</a></li>
+                <li><a href=" Contact Us"> Contact Us</a></li>
+                <li><a href="Login">Login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-container">
+                <h1 class="banner-title">Brand New <br> Group of Architects</h1>
+                <p class="banner-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-button">Explore More</button> 
+            </div>
+            <img  class="banner-pic" src="images/banner.png" alt="">   
+        </div>
     </header>
+    <main>
+        <!-- Teams Container -->
+         <section class="teams-container">
+            <div class="teams-img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-contain">
+                <h2 class="teams-title"> <span class="Quick">Quick list</span> of Our <span class="Feature">Features</span></h2>
+                <p class="teams-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-button">Explore More</button> 
+            </div>
+         </section>
+         <!-- Features -->
+         <section class="features-container">
+                <div class="features-contain">
+                    <h3 class="features-title">Features you will love & enjoy</h3>
+                    <p class="features-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="features-card">
+                        <h3 class="card-title">Dexktop & Mobile Version</h3>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-card">
+                        <h3 class="card-title">Drag & Drop Builder</h3>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-card">
+                        <h3 class="card-title">Awesome Modern Design</h3>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-card">
+                        <h3 class="card-title">Super Easy to Edit</h3>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="features-img">
+                    <img src="images/architect.png" alt="">
+                    <div class="years">
+                        <h1>10+Year</h1>
+                        <p>Experience</p>
+                    </div>
+                </div>
+         </section>
+         <!-- Some Facts -->
+          <section class="facts">
+                 <div class="some">
+                    <h3 class="some-title">Some Facts</h3>
+                    <p class="some-pera">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
+                 </div>
+                 <div class="icon-container">
+                    <div class="icon">
+                        <img src="images/icons/ribon.png" alt="" class="img-icon">
+                        <h3 class="icon-number">54</h3>
+                        <p class="icon-pera">Awards Winnings</p>
+                    </div>
+                    <div class="icon">
+                        <img src="images/icons/projects.png" alt="" class="img-icon">
+                        <h3 class="icon-number">1458</h3>
+                        <p class="icon-pera">Project Finished</p>
+                    </div>
+                    <div class="icon">
+                        <img src="images/icons/customers.png" alt="" class="img-icon">
+                        <h3 class="icon-number">590</h3>
+                        <p class="icon-pera">Clients Worked</p>
+                    </div>
+                    <div class="icon">
+                        <img src="images/icons/email.png" alt="" class="img-icon">
+                        <h3 class="icon-number">22578</h3>
+                        <p class="icon-pera">Email Send</p>
+                    </div>
+                 </div>
+          </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
