--- a/index.html
+++ b/index.html
@@ -105,7 +105,25 @@
                     </div>
                  </div>
           </section>
+          <!-- Sponsor-contain  -->
+          <section class="sponspors-container">
+            <div class="sponsors-description">
+             <h3 class="sponsor-title">Our Sponspors</h3>
+             <p class="sponsor-pera">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-logo">
+             <div class="logo"><img src="images/sponsors/spotify.png" alt=""></div>
+             <div class="logo"><img src="images/sponsors/amazon.png" alt=""></div>
+             <div class="logo"><img src="images/sponsors/google.png" alt=""></div>
+             <div class="logo"><img src="images/sponsors/telerama.png" alt=""></div>
+             <div class="logo"><img src="images/sponsors/figma.png" alt=""></div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-end">
+            <p class="end-pera">All rights reserved copyright@2023 startup landing page design</p>
+         </div>
+    </footer>
 </body>
 </html>
