--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="banner">
             <div class="banner-container">
                 <h1 class="banner-title">Brand New <br> Group of Architects</h1>
-                <p class="banner-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="banner-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
                 <button class="primary-button">Explore More</button> 
             </div>
             <img  class="banner-pic" src="images/banner.png" alt="">   
@@ -42,7 +42,7 @@
             </div>
             <div class="teams-contain">
                 <h2 class="teams-title"> <span class="Quick">Quick list</span> of Our <span class="Feature">Features</span></h2>
-                <p class="teams-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="teams-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
                 <button class="primary-button">Explore More</button> 
             </div>
          </section>
@@ -50,22 +50,22 @@
          <section class="features-container">
                 <div class="features-contain">
                     <h3 class="features-title">Features you will love & enjoy</h3>
-                    <p class="features-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <p class="features-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
                     <div class="features-card">
-                        <h3 class="card-title">Dexktop & Mobile Version</h3>
-                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <h3 class="card-title">Desktop & Mobile Version</h3>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
                     </div>
                     <div class="features-card">
                         <h3 class="card-title">Drag & Drop Builder</h3>
-                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
                     </div>
                     <div class="features-card">
                         <h3 class="card-title">Awesome Modern Design</h3>
-                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
                     </div>
                     <div class="features-card">
                         <h3 class="card-title">Super Easy to Edit</h3>
-                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        <p class="card-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
                     </div>
                 </div>
                 <div class="features-img">
@@ -108,7 +108,7 @@
           <!-- Sponsor-contain  -->
           <section class="sponspors-container">
             <div class="sponsors-description">
-             <h3 class="sponsor-title">Our Sponspors</h3>
+             <h3 class="sponsor-title">Our Sponsors</h3>
              <p class="sponsor-pera">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
             </div>
             <div class="sponsor-logo">
